# KairoEditor

./: .gitignore  AIEditorSession.cppm  AIEditorTools.cppm  AuthoringDocument.cppm  AuthoringWorkspaceState.cppm  CMakeLists.txt  CommandHistory.cppm  CoreDocumentSchemas.cppm  DocumentCommands.cppm  DocumentCompiler.cppm  DocumentProjection.cppm  DocumentSchema.cppm  DocumentSerialization.cppm  DocumentTypes.cppm  DocumentValidation.cppm  EditorActions.cppm  EditorInputRouter.cppm  EditorLayoutRecovery.cppm  EditorShell.cppm  EditorState.cppm  EditorTheme.cppm  EditorTypes.cppm  GraphCanvas.cppm  ImGuiGraphCanvas.cppm  ImGuiReflectionInspector.cppm  ImGuiRuntime.cppm  KairoEditor.cppm  KairoUI.cppm  KeymapSettings.cppm  LogicDocumentCompiler.cppm  PanelState.cppm  PhysicsPreview.cppm  PrimitiveTypes.cppm  ProjectDescriptor.cppm  ProjectDocuments.cppm  ProjectLogicBuild.cppm  ProjectPaths.cppm  ProjectRecovery.cppm  ProjectSession.cppm  README.md  (+6 more)
docs/: EDITOR_CONTROLS.md  EDITOR_PRODUCT_SPEC.md  UI_ARCHITECTURE.md
examples/: editor_main.cpp  project_compiler_main.cpp
examples/StarterProject/: Assets.kassets  Project.kproject
examples/StarterProject/Config/: Input.kinput
examples/StarterProject/Logic/: Player.kdoc
examples/StarterProject/Scenes/: Main.kscene
tests/: DocumentCompilerTests.cpp  EditorTests.cpp  KairoUITests.cpp  PhysicsPreviewTests.cpp  SceneRenderBridgeTests.cpp
