cmake_minimum_required(VERSION 3.28)
project(KairoEditor LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
option(KAIRO_EDITOR_BUILD_TESTS "Build KairoEditor tests" ${PROJECT_IS_TOP_LEVEL})

if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
    add_compile_options(-Wall -Wextra -Wpedantic -Wno-unused-parameter)
endif()

if(NOT TARGET KairoEngineCore)
    set(KAIRO_ENGINE_CORE_SOURCE_DIR "" CACHE PATH "Path to a local KairoEngineCore checkout")
    if(KAIRO_ENGINE_CORE_SOURCE_DIR AND EXISTS "${KAIRO_ENGINE_CORE_SOURCE_DIR}/CMakeLists.txt")
        add_subdirectory("${KAIRO_ENGINE_CORE_SOURCE_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/_deps/KairoEngineCore")
    elseif(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/../KairoEngineCore/CMakeLists.txt")
        add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/../KairoEngineCore" "${CMAKE_CURRENT_BINARY_DIR}/_deps/KairoEngineCore")
    else()
        include(FetchContent)
        FetchContent_Declare(KairoEngineCore GIT_REPOSITORY https://github.com/swayam8624/KairoEngineCore.git GIT_TAG main)
        FetchContent_MakeAvailable(KairoEngineCore)
    endif()
endif()

add_library(KairoEditor)
target_sources(KairoEditor PUBLIC FILE_SET CXX_MODULES BASE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} FILES
    EditorTypes.cppm EditorState.cppm PanelState.cppm KairoEditor.cppm)
target_link_libraries(KairoEditor PUBLIC KairoEngineCore)

if(KAIRO_EDITOR_BUILD_TESTS)
    include(FetchContent)
    FetchContent_Declare(Catch2 GIT_REPOSITORY https://github.com/catchorg/Catch2.git GIT_TAG v3.5.4)
    FetchContent_MakeAvailable(Catch2)
    add_executable(KairoEditorTests tests/EditorTests.cpp)
    target_link_libraries(KairoEditorTests PRIVATE KairoEditor Catch2::Catch2WithMain)
    enable_testing()
    add_test(NAME KairoEditorTests COMMAND KairoEditorTests)
endif()
